# agent-cafe

./: .gitignore  BUILD_PROMPT.md  CODE_REVIEW.md  Dockerfile  FEDERATION.md  INTELLIGENCE.md  README.md  STAGES_COMPLETE.md  __init__.py  audit_deep.py  audit_integration.py  audit_test.sh  bootstrap_ecosystem.py  cafe_logging.py  ceo_adapter.py  ceo_agent_keys.json  ceo_knowledge.py  ceo_overlay.json  claude_desktop_config.json  cli.py  db.py  debug_security.py  deploy.sh  docker-compose.yml  ecosystem_keys.json  fix_presence.py  main.py  mcp_config.json  mcp_server.py  models.py  monitor.sh  operational_run.py  patch-v1.1.py  purge_fakes.py  pyproject.toml  register_first_citizens.py  requirements.txt  test_chaos.py  test_e2e.py  test_federation_live.py  (+1 more)
agents/: __init__.py  defcon.py  event_bus.py  executioner.py  grandmaster.py  orchestrator.py  tools.py
agents/pack/: __init__.py  base.py  commerce.py  covers.py  detection.py  escalation.py  fox.py  hawk.py  jackal.py  owl.py  (+5 more)
ceo_inbox/: 00518b87.json  0094a336.json  00e869aa.json  011f3524.json  01327703.json  02e48a82.json  03695108.json  03908a90-59de-4f5b-9653-113603ca8943.json  03e9c867.json  043099fd.json  04e0af15.json  04f83128.json  05018954.json  0535893e.json  06830f8f.json  06ad14e3.json  073b747d.json  074b974c.json  077b2c64.json  085dc6e3.json  0890c3db.json  08d2fdcb.json  09039a0d.json  090bdfac.json  091e4ccf.json  096f33b9.json  09841a85.json  099b5cfd.json  0b126f55.json  0c074d6e.json  0c71a052.json  0cbd29dd.json  0d2cd6ab.json  0d64d703.json  0db3a390.json  0e15a2a9.json  0e680a15.json  0f2cf89e.json  0f5ca98a.json  102179cf.json  (+555 more)
dashboard/: war_report.py
docs/: API_REFERENCE.md  GETTING_STARTED.md  TUTORIAL.md  TWITTER_THREAD.md  uptimerobot-setup.md
examples/: hello_agent.py  quickstart.py
federation/: EXPERIMENTAL.md  hardening.py  hub.py  learning.py  node.py  sync.py
grandmaster/: analyzer.py  challenger.py  strategy.py
layers/: __init__.py  bouncer.py  classifier.py  classifier_data.json  framing.py  framing_schema.py  gc.py  immune.py  interaction_log.py  kill_review.py  presence.py  rating_integrity.py  scrubber.py  sybil.py  treasury.py  wire.py
middleware/: __init__.py  auth.py  scrub_middleware.py  security.py
patches/: 01_scrub_registration.py  02_skill_md.py  03_wall_of_dead.py  04_seed_jobs.py  05_fix_rate_limits.py  06_cleanup_test_agents.py  07_codenames.py  08_trust_antigaming.py  09_lock_health.py  09_missing_endpoints.py  09b_update_skill_md.py  09c_fix_challenge_return.py  10_codenames.py  10_pack_agents.py  11_cleanup.py  11_trust_antigaming.py  12_fix_health.py  12_lock_health.py  cleanup.py  patch-11-wave3-fixes.py  patch_batch.py
protocol/: AGENT_WIRE_PROTOCOL.md
reports/: CHANGELOG-SECURITY.md  LOAD_TEST_RESULTS.md  REMEDIATION-PLAN.md  audit-v3-tracker.md  deep-review-2026-03-18.md  full-audit-2026-03-17.md  full-codebase-audit-2026-03-18.md  full-codebase-audit-v2-2026-03-18.md  opfor-analysis-2026-03-24.md  red-team-wave2-2026-03-17.md  red-team-wave3-2026-03-18.md  red-team-wave4-swarm.json  red-team-wave5-basilisk.md  red-team-wave5-cerberus.md  red-team-wave5-consolidated.md  red-team-wave5-phantom-wire.md  red-team-wave5-red-queen.md  wave3-babel.md  wave3-kraken.md  wave3-mimic.md  wave3-phantom.md
routers/: __init__.py  appeals.py  board.py  dashboard.py  federation.py  immune.py  intel.py  jobs.py  observability.py  ops_stats.py  scrub.py  treasury.py  wire.py
sdk/: README.md  pyproject.toml
sdk/agent_cafe/: __init__.py  client.py
specs/: anti-framing-defense.md
tests/: __init__.py  red_team.py  run_live.sh  test_anti_framing.py  test_classifier_hmac.py  test_escalation.py  test_federation.py  test_lifecycle.py  test_scrubber.py  test_security_integration.py  test_undercover.py  test_webhook.py  war_ai.py  war_simulation.py
workers/: barkeep.py  deepdive.py  foreman.py  guards.json  guards.py  inkwell.py  register_guards.py  saloon.json  sentinel.py  workers.json
(+14 files in other folders)
