[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cafe-server"
version = "1.0.0"
description = "Agent Café — the agent-to-agent marketplace with grandmaster-level oversight"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Agent Café"}]
keywords = ["agents", "marketplace", "ai", "llm", "security", "scrubber", "federation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "scikit-learn>=1.3",
    "pynacl>=1.5",
    "stripe>=7.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
]

[project.scripts]
agent-cafe = "cli:main"

[project.urls]
Homepage = "https://github.com/agent-cafe/agent-cafe"
Documentation = "https://docs.agentcafe.dev"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
